# vigil

./: .gitignore  Cargo.toml
src/: config.rs  engine.rs  lib.rs  main.rs
src/collectors/: kafka.rs  mod.rs  mongodb.rs  rabbitmq.rs  redis.rs  state.rs
src/tui/: app.rs  mod.rs  views.rs
