[package]
name = "vigil"
version = "0.1.0"
edition = "2021"
description = "A terminal-based observability tool for monitoring distributed systems locally."

[dependencies]
# TUI / Terminal
ratatui = "0.28.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }

# Async / Concurrency
tokio = { version = "1.51.0", features = ["full"] }
futures = "0.3.32"

# Service Drivers
redis = { version = "0.27.6", features = ["tokio-comp"] }
mongodb = "3.5.2"
rskafka = "0.5.0"
lapin = "2.5.5"

# CLI & Configuration
clap = { version = "4.6.0", features = ["derive"] }
toml = "0.8.23"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
chrono = "0.4.44"

# Error handling
anyhow = "1.0.102"
thiserror = "1.0.69"

# Utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
